--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,12 +16,13 @@ jobs:
           root_file: |
             post.tex
           working_directory: post
+          extra_system_packages: "py-pygments"
 
       - name: Install PDF to html
         run: |
           wget https://github.com/pdf2htmlEX/pdf2htmlEX/releases/download/v0.18.8.rc1/pdf2htmlEX-0.18.8.rc1-master-20200630-Ubuntu-bionic-x86_64.deb
           sudo apt install ./pdf2htmlEX-0.18.8.rc1-master-20200630-Ubuntu-bionic-x86_64.deb
-          pdf2htmlEX --zoom 1.3 post/post.pdf
+          pdf2htmlEX --zoom 1.5 post/post.pdf
           mv post.html index.html
 
 
