WIP- latexmk shell escape

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
             post.tex
           working_directory: post
           extra_system_packages: "py-pygments"
+          latexmk_shell_escape: true
 
       - name: Install PDF to html
         run: |
